[package]
name = "rusty"
version = "0.1.0"
authors = ["mateu"]

[dependencies]
chrono = "0.4.6"
lazy_static = "1.2.0"
specs = "0.14.1"
specs-derive = "0.3.0"

[dependencies.sdl2]
    version = "0.31"
    default-features = false
    features = ["ttf","image","mixer", "gfx"]

[dependencies.sdl2-extras]
    version = "0.1.3"
    features = ["fspecs"]