[package]
name = "rusty"
version = "0.1.0"
authors = ["mateu"]
# edition = "2018"

[dependencies]
chrono = "0.4.6"
lazy_static = "1.2.0"
specs = "0.14.1"
specs-derive = "0.3.0"
colored = "1.6.1"
log = "0.4"
pretty_env_logger = "0.2.5"

[dependencies.sdl2]
    version = "0.31"
    default-features = false
    features = ["ttf","image","mixer", "gfx"]

[dependencies.sdl2-extras]
    version = "0.1.3"
    features = ["fspecs"]